--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@google/maps": "^0.5.5",
     "expo": "^32.0.0",
     "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.11",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "sugar": "^2.0.6",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
