--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
+    "redux-persist-transform-immutable": "^5.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sugar": "^2.0.6",
